[gd_scene load_steps=7 format=3 uid="uid://5545fiej7shn"]

[ext_resource type="Script" path="res://Main.gd" id="1_b48r5"]
[ext_resource type="PackedScene" uid="uid://cjeu0723674cg" path="res://christmas_tree/christmas_tree.tscn" id="2_jaaew"]
[ext_resource type="TileSet" uid="uid://cib57u0ox4fx0" path="res://test_tile_set.tres" id="3_cytm1"]
[ext_resource type="PackedScene" uid="uid://dy68wvf0wasa2" path="res://Player/player.tscn" id="4_3tuax"]
[ext_resource type="PackedScene" uid="uid://cxxxv5x4koug6" path="res://decorations/decoration_box.tscn" id="5_n3vdi"]
[ext_resource type="AudioStream" uid="uid://b81yman8onbn1" path="res://Christmas Village - Aaron Kenny.mp3" id="6_clirs"]

[node name="Main" type="Node"]
script = ExtResource("1_b48r5")

[node name="World" type="Node2D" parent="."]

[node name="ChristmasTree" parent="World" instance=ExtResource("2_jaaew")]
position = Vector2(566, 384)

[node name="InGameNodes" type="Node2D" parent="World"]

[node name="TileMap" type="TileMap" parent="World/InGameNodes"]
position = Vector2(138, -104)
tile_set = ExtResource("3_cytm1")
format = 2
layer_0/tile_data = PackedInt32Array(2359306, 262144, 2, 2359307, 262144, 2, 2359308, 262144, 2, 2359309, 262144, 2, 2359310, 262144, 2, 2359311, 262144, 2, 2359312, 262144, 2, 2359313, 262144, 2, 2359314, 262144, 2, 2359315, 262144, 2, 2359316, 262144, 2, 2359317, 262144, 2, 2359318, 262144, 2, 2359319, 262144, 2, 2359320, 262144, 2, 2359321, 262144, 2, 2359322, 262144, 2, 2359323, 262144, 2, 2359324, 262144, 2, 2359325, 262144, 2, 2359326, 262144, 2, 2359327, 262144, 2, 2359328, 262144, 2, 2359329, 262144, 2, 2359330, 262144, 2, 2359331, 262144, 2, 2359332, 262144, 2, 2359333, 262144, 2, 2359334, 262144, 2, 2359335, 262144, 2, 2359336, 262144, 2, 2359337, 262144, 2, 1966097, 196608, 2, 1966096, 196608, 2, 1966095, 196608, 2, 1966094, 196608, 2, 1966093, 196608, 2, 1966092, 196608, 2, 1966090, 196608, 2, 1966091, 196608, 2, 1966098, 196608, 2, 1966099, 196608, 2, 1966100, 196608, 2, 1966101, 196608, 2, 1966102, 196608, 2, 1966103, 196608, 2, 1966104, 196608, 2, 1966105, 196608, 2, 1966106, 196608, 2, 1966107, 196608, 2, 1966108, 196608, 2, 1966109, 196608, 2, 1966110, 196608, 2, 1966111, 196608, 2, 1966112, 196608, 2, 1966113, 196608, 2, 1966114, 196608, 2, 1966115, 196608, 2, 1966116, 196608, 2, 1966117, 196608, 2, 1966118, 196608, 2, 1966119, 196608, 2, 1966120, 196608, 2, 1966121, 196608, 2, 1572874, 196608, 2, 1572875, 196608, 2, 1572876, 196608, 2, 1572877, 196608, 2, 1572878, 196608, 2, 1572879, 196608, 2, 1572880, 196608, 2, 1572881, 196608, 2, 1572882, 196608, 2, 1572883, 196608, 2, 1572884, 196608, 2, 1572885, 196608, 2, 1572886, 196608, 2, 1572887, 196608, 2, 1572888, 196608, 2, 1572889, 196608, 2, 1572890, 196608, 2, 1572891, 196608, 2, 1572892, 196608, 2, 1572893, 196608, 2, 1572894, 196608, 2, 1572895, 196608, 2, 1572896, 196608, 2, 1572897, 196608, 2, 1572898, 196608, 2, 1572899, 196608, 2, 1572900, 196608, 2, 1572901, 196608, 2, 1572902, 196608, 2, 1572903, 196608, 2, 1572904, 196608, 2, 1572905, 196608, 2, 1179658, 196608, 2, 1179659, 196608, 2, 1179660, 196608, 2, 1179661, 196608, 2, 1179662, 196608, 2, 1179663, 196608, 2, 1179664, 196608, 2, 1179665, 196608, 2, 1179666, 196608, 2, 1179667, 196608, 2, 1179668, 196608, 2, 1179669, 196608, 2, 1179670, 196608, 2, 1179671, 196608, 2, 1179672, 196608, 2, 1179673, 196608, 2, 1179674, 196608, 2, 1179675, 196608, 2, 1179676, 196608, 2, 1179677, 196608, 2, 1179678, 196608, 2, 1179679, 196608, 2, 1179680, 196608, 2, 1179681, 196608, 2, 1179682, 196608, 2, 1179683, 196608, 2, 1179684, 196608, 2, 1179685, 196608, 2, 1179686, 196608, 2, 1179687, 196608, 2, 1179688, 196608, 2, 1179689, 196608, 2, 786442, 196608, 2, 786443, 196608, 2, 786444, 196608, 2, 786445, 196608, 2, 786446, 196608, 2, 786447, 196608, 2, 786448, 196608, 2, 786449, 196608, 2, 786450, 196608, 2, 786451, 196608, 2, 786452, 196608, 2, 786453, 196608, 2, 786454, 196608, 2, 786455, 196608, 2, 786456, 196608, 2, 786457, 196608, 2, 786458, 196608, 2, 786459, 196608, 2, 786460, 196608, 2, 786461, 196608, 2, 786462, 196608, 2, 786463, 196608, 2, 786464, 196608, 2, 786465, 196608, 2, 786466, 196608, 2, 786467, 196608, 2, 786469, 196608, 2, 786468, 196608, 2, 786470, 196608, 2, 786471, 196608, 2, 786472, 196608, 2, 786473, 196608, 2)

[node name="P1" parent="World/InGameNodes" instance=ExtResource("4_3tuax")]
position = Vector2(381, 361)
which_player = 1.0

[node name="P2" parent="World/InGameNodes" instance=ExtResource("4_3tuax")]
position = Vector2(689, 444)
which_player = 2.0

[node name="DecorationBox2" parent="World/InGameNodes" instance=ExtResource("5_n3vdi")]
position = Vector2(325, 351)

[node name="DecorationBox" parent="World/InGameNodes" instance=ExtResource("5_n3vdi")]
position = Vector2(772, 446)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Time" type="Label" parent="UI"]
layout_mode = 0
offset_right = 206.0
offset_bottom = 23.0
text = "0"

[node name="Back" type="Button" parent="UI"]
visible = false
layout_mode = 0
offset_left = 1082.0
offset_top = 597.0
offset_right = 1127.0
offset_bottom = 628.0
text = "Back"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_clirs")

[connection signal="pressed" from="UI/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
